test/corpus/declaration_edge_cases.txt
=========================
Declaration edge cases
=========================

enum Mode:
    A
    B

event Empty:
    pass

---

(source_file
  (enum_declaration
    name: (identifier)
    (identifier)
    (identifier))
  (event_declaration
    name: (identifier)
    (pass_statement)))
