test/corpus/declarations.txt
==================
Basic declarations
==================

# pragma version ^0.4.1

owner: public(address)

struct Position:
    x: uint256
    y: uint256

event Transfer:
    sender: indexed(address)
    receiver: indexed(address)
    value: uint256

flag Access:
    READ
    WRITE

def ping() -> uint256:
    return 1

---

(source_file
  (pragma_directive)
  (state_variable_declaration
    name: (identifier)
    type: (variable_annotation
      value: (identifier)))
  (struct_declaration
    name: (identifier)
    (struct_member
      name: (identifier)
      type: (identifier))
    (struct_member
      name: (identifier)
      type: (identifier)))
  (event_declaration
    name: (identifier)
    (event_member
      name: (identifier)
      type: (indexed_type
        (identifier)))
    (event_member
      name: (identifier)
      type: (indexed_type
        (identifier)))
    (event_member
      name: (identifier)
      type: (identifier)))
  (flag_declaration
    name: (identifier)
    (identifier)
    (identifier))
  (function_definition
    (function_signature
      name: (identifier)
      return_type: (identifier))
    (block
      (return_statement
        value: (atom_expression
          (atom
            (integer)))))))
