test/corpus/decorator_comment_gap.txt
=========================
Decorator comment gap
=========================

@internal
# comment between decorator and function signature
def f():
    pass

---

(source_file
  (function_definition
    (decorator
      (identifier))
    (comment)
    (function_signature
      (identifier))
    (block
      (pass_statement))))
